SUBDIRS := timetest gtest latency_test pps_test throughput_test

EXTRA_DIST = \
	timetest \
	gtest \
	async-echo-client \
	benchmarking_test \
	connect-disconnect \
	extra_api_tests \
	functionality \
	listen \
	low_pps_tcp_send_test \
	mc_loop_test \
	multithread_test \
	server_test \
	vma_perf_envelope \
	reuse_ud_test.c \
	select_t1.c
